--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -10,7 +10,7 @@
 @import '~angular2-toaster/toaster.css';
 
 //Spinner
-@import '~spinkit/css/spinkit.css';
+@import '~spinkit/spinkit.css';
 @import '~loaders.css/loaders.css';
 
 //== Bootstrap
